# bm-mote-rs-poc1

./: Cargo.toml
.cargo/: config.toml
src/: main.rs
