[package]
name = "bm-mote-poc1"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy.git", features = [
    "defmt",
    "unstable-pac",
    "stm32u575ci",
    "time-driver-any",
    "memory-x",
] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", features = [
    "defmt",
] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", features = [
    "task-arena-size-32768",
    "arch-cortex-m",
    "executor-thread",
    "defmt",
    "integrated-timers",
] }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }
embassy-usb = { git = "https://github.com/embassy-rs/embassy.git", features = [
    "defmt",
] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git" }

byteorder = { version = "1.5.0", default-features = false }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"
embedded-hal = "1.0.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
heapless = { version = "0.8", default-features = false }

micromath = "2.0.0"

[profile.release]
debug = 2
