[package]
name = "bm-mote-poc1"
version = "0.1.0"
edition = "2021"

[dependencies]
assign-resources = "0.4.1"
byteorder = { version = "1.5.0", default-features = false }
cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"
defmt = "0.3"
defmt-rtt = "0.4"
embassy-executor = { version = "0.5.0", features = [
    "task-arena-size-32768",
    "arch-cortex-m",
    "executor-thread",
    "defmt",
    "integrated-timers",
] }
embassy-futures = { version = "0.1.1" }
embassy-net = { version = "0.4.0", features = ["defmt", "proto-ipv6", "medium-ethernet"] }
embassy-net-adin1110 = { version = "0.2.0" }
embassy-stm32 = { version = "0.1.0", features = [
    "defmt",
    "exti",
    "memory-x",
    "stm32u575ci",
    "time-driver-any",
    "unstable-pac",
] }
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-time = { version = "0.3.1", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }
embassy-usb = { version = "0.2.0", features = ["defmt"] }
embedded-hal-async = "1.0.0"
embedded-hal-bus = { version = "0.2.0", features = ["async"] }
heapless = { version = "0.8", default-features = false }
micromath = "2.0.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
rand_core = "0.6.4"
smoltcp = { version = "0.11.0", default-features = false, features = [
    "socket",
    "async",
    "socket-raw",
    "medium-ethernet",
] }
static_cell = "2"

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", branch = "main" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", branch = "main" }
embassy-net = { git = "https://github.com/embassy-rs/embassy.git", branch = "main" }
embassy-net-adin1110 = { git = "https://github.com/embassy-rs/embassy.git", branch = "main" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy.git", branch = "main" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", branch = "main" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", branch = "main" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy.git", branch = "main" }

[profile.release]
debug = 2
